--- a/Hydroflask.html
+++ b/Hydroflask.html
@@ -98,10 +98,10 @@
     <h2 class="titleLogo">The Mundane Coyote</h2>
 
     <ul>
-      <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
+        <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
+        <li><a href="https://nesslie.github.io/news.html">News</a></li>
+        <li><a href="https://nesslie.github.io/about.html">About</a></li>
+      </ul>
 
     <img class="c" src="https://preview.redd.it/yvzwgavvldx11.jpg?width=576&auto=webp&s=9fb0df80a93ad98c58b80fc23d2506f9bea68468"
       alt="Cock and Ball Torture">
