--- a/about.html
+++ b/about.html
@@ -115,10 +115,10 @@
     <h2 class="titleLogo">The Mundane Coyote</h2>
 
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
+            <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
+            <li><a href="https://nesslie.github.io/news.html">News</a></li>
+            <li><a href="https://nesslie.github.io/about.html">About</a></li>
+          </ul>
 
     <div class="leftCol">
 
