--- a/sauce.html
+++ b/sauce.html
@@ -98,10 +98,10 @@
     <h2 class="titleLogo">The Mundane Coyote</h2>
 
     <ul>
-      <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
+        <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
+        <li><a href="https://nesslie.github.io/news.html">News</a></li>
+        <li><a href="https://nesslie.github.io/about.html">About</a></li>
+      </ul>
 
     <img class="c" src="https://media.istockphoto.com/photos/various-dip-sauces-picture-id576594466?k=6&m=576594466&s=612x612&w=0&h=oWm7I6kNXtP07lOK4VF4ggJTQrxZ3OFEIv_zEv1Ajm8="
       alt="Cock and Ball Torture">
