--- a/speedbumps.html
+++ b/speedbumps.html
@@ -98,10 +98,10 @@
     <h2 class="titleLogo">The Mundane Coyote</h2>
 
     <ul>
-      <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
+        <li><a href="https://nesslie.github.io/Homepage.html">Home</a></li>
+        <li><a href="https://nesslie.github.io/news.html">News</a></li>
+        <li><a href="https://nesslie.github.io/about.html">About</a></li>
+      </ul>
 
     <img class="c" src="https://s.hdnux.com/photos/41/42/21/8791156/3/920x920.jpg"
       alt="Cock and Ball Torture">
