--- a/Homepage.html
+++ b/Homepage.html
@@ -84,8 +84,8 @@
       } div.pageContent {
         background-color: #ffffff;
         width: 70vw;
-        float: inline-end;
         margin-top: 2vh;
+        float: right;
       } p.pageContent {
         text-align: center;
         font-family: "Comic Sans MS", "Comic Sans", bold;
