--- a/news.html
+++ b/news.html
@@ -84,7 +84,7 @@
       } div.pageContent {
         background-color: #ffffff;
         width: 70vw;
-        float: inline-end;
+        float: right;
         margin-top: 2vh;
       } p.pageContent {
         text-align: center;
