--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
       } div.pageContent {
         background-color: #ffffff;
         width: 70vw;
-        float: inline-end;
+        float: right;
         margin-top: 2vh;
       } p.pageContent {
         text-align: left;
