--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <ul class="topbar">
-    <li class="topbar"><a href="default.sp"><img src="favicon.ico"</a></li>
-    <li class="topbar"><a href="default.asp">Home</a></li>
-  </ul> 
+  <!-- NAVBAR-->
+  <div class="topnav">
+    <ul>
+      <li><img id="logoSpecs" src="icon.png"></li>
+      <li><a>home</a></li>
+    </ul>
+  </div> 
 
-
+  <div id="typing-text-container">
+  </div>
 
 
 
