--- a/index.html
+++ b/index.html
@@ -1,53 +1,32 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang = "en">
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width,initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="styles.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+    <title>Portfolio</title>
 </head>
-
-<body>
-
-  <!-- Add your site or application content here -->
-  <!-- NAVBAR-->
-  <div class="topnav">
-    <ul>
-      <li><img id="logoSpecs" src="icon.png"></li>
-      <li><a>home</a></li>
-    </ul>
-  </div> 
-
-  <div id="typing-text-container">
-  </div>
-
-
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+<body class="container full-height-grow">
+    <header class="main-header">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><img src="src/logo.png"></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="home-mains-section">
+        <div class="img-wrapper">
+            <div class = "my-face"></div>
+        </div>
+        <div>
+            <h1 class="title">Brian Barcenas</h1>
+            <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with a taste and experience in Graphic Design. I also play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
+            <a href="" class="main-button">Who am I?</a>
+        </div>
+    </section>
 </body>
-
 </html>
