--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><img src="src/logo.png"></li>
+                <li><img src="src/trianglelogo.svg"></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
@@ -25,7 +25,7 @@
             <div class="call-to-action">
                 <h1 class="title">Brian Barcenas</h1>
                 <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with a taste and experience in Graphic Design. I also play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
-                <a href="" class="main-button">Who am I?</a>
+                <a href="" class="btn">Who am I?</a>
             </div>
       
     </section>
