--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with a taste and experience in Graphic Design. I also play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
             <a href="" class="main-button">Who am I?</a>
         </div>
+        <p> bro please</p>
     </section>
 </body>
 </html>
