--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             </ul>
         </nav>
     </header>
-    <section class="home-mains-section">
-        <div class="img-wrapper">
-            <div class = "my-face"></div>
-        </div>
-        <div>
-            <h1 class="title">Brian Barcenas</h1>
-            <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with a taste and experience in Graphic Design. I also play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
-            <a href="" class="main-button">Who am I?</a>
-        </div>
-        <p> bro please</p>
+    <section class="home-main-section">
+            <div class="img-wrapper">
+                <div class = "my-face"></div>
+            </div>
+            <div class="call-to-action">
+                <h1 class="title">Brian Barcenas</h1>
+                <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with a taste and experience in Graphic Design. I also play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
+                <a href="" class="main-button">Who am I?</a>
+            </div>
+      
     </section>
 </body>
 </html>
