--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="styles.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Brian Barcenas | Home</title>
+    <link rel="shortcut icon" type="image/png" href="src/favicon.png">
 </head>
 <body class="container full-height-grow">
     <header class="main-header">
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><img src="src/trianglelogo.svg"></li>
+                <li><img src="src/pinklogo.svg" class="img-align"></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
