footer but its weird now

--- a/index.html
+++ b/index.html
@@ -9,26 +9,34 @@
     <title>Brian Barcenas | Home</title>
     <link rel="shortcut icon" type="image/png" href="src/favicon.png">
 </head>
-<body class="container full-height-grow">
-    <header class="main-header">
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><img src="src/pinklogo.svg" class="img-align"></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="home-main-section">
-            <div class="img-wrapper">
-                <div class = "my-face"></div>
-            </div>
-            <div class="call-to-action">
-                <h1 class="title">Brian Barcenas</h1>
-                <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with a taste and experience in Graphic Design. I also play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
-                <a href="" class="btn">Who am I?</a>
-            </div>
-      
-    </section>
+<body class="full-height-grow">
+        <header class="main-header">
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><img src="src/pinklogo.svg" class="img-align"></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="home-main-section">
+                <div class="img-wrapper">
+                    <div class = "my-face"></div>
+                </div>
+                <div class="call-to-action">
+                    <h1 class="title">Brian Barcenas</h1>
+                    <span class="bio">Welcome to my website! I’m currently a <b>Computer Engineering Major</b> at UC Davis with experience in Graphic Design. I also love to cook and play Overwatch for UC Davis. This website will keep track of my journey into the professional field and through life. But first.....</span>
+                    <a href="" class="btn">Who am I?</a>
+                </div>
+        </section>
+    <footer class="main-footer">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#" class="social-link"><img src="src/mail.svg">Email</a></li>
+                    <li><a href="#" class="social-link"><img src="src/linkedin.svg">LinkedIn</a></li>
+                    <li><a href="#" class="social-link"><img src="src/github.svg">GitHub</a></li>
+                </ul>
+            </nav>
+    </footer>
 </body>
 </html>
