--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><img src="src/pinklogo.svg" class="img-align"></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="https://www.behance.net/brianubarcenas">Portfolio</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,13 +30,15 @@
                 </div>
         </section>
     <footer class="main-footer">
+        <div class="container">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#" class="social-link"><img src="src/mail.svg">Email</a></li>
-                    <li><a href="#" class="social-link"><img src="src/linkedin.svg">LinkedIn</a></li>
-                    <li><a href="#" class="social-link"><img src="src/github.svg">GitHub</a></li>
+                    <li><a href="https://www.behance.net/brianubarcenas" class="social-link"><img src="src/mail.svg">brianb@frostii.me</a></li>
+                    <li><a href="https://linkedin.com/in/brian-barcenas707" class="social-link"><img src="src/linkedin.svg">LinkedIn</a></li>
+                    <li><a href="https://github.com/nesslie" class="social-link"><img src="src/github.svg">GitHub</a></li>
                 </ul>
             </nav>
+        </div>
     </footer>
 </body>
 </html>
