--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="https://www.behance.net/brianubarcenas" class="social-link"><img src="src/mail.svg">brianb@frostii.me</a></li>
+                    <li><img src="src/mail.svg">brianb@frostii.me</a></li>
                     <li><a href="https://linkedin.com/in/brian-barcenas707" class="social-link"><img src="src/linkedin.svg">LinkedIn</a></li>
                     <li><a href="https://github.com/nesslie" class="social-link"><img src="src/github.svg">GitHub</a></li>
                 </ul>
