Fixed Social Media Icons

--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
         <div class="container">
             <nav class="footer-nav">
                 <ul>
-                    <li><img src="src/mail.svg"><b>brianb@frostii.me</b></a></li>
-                    <li><a href="https://linkedin.com/in/brian-barcenas707" class="social-link"><img src="src/linkedin.svg">LinkedIn</a></li>
-                    <li><a href="https://github.com/nesslie" class="social-link"><img src="src/github.svg">GitHub</a></li>
+                    <li>
+                        <a href="" class="social-link"><img src="src/mail.svg" class="social-icon"><b>brianb@frostii.me</b></a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/in/brian-barcenas707" class="social-link"><img src="src/linkedin.svg" class="social-icon">LinkedIn</a>
+                    </li>
+                    <li>
+                        <div class="social-wrapper">
+                            <a href="https://github.com/nesslie" class="social-link"><img src="src/github.svg" class="social-icon">GitHub</a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </div>
