--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                             <a href="https://github.com/nesslie" class="social-link"><img src="src/github.svg" class="social-icon">GitHub</a>
                         </div>
                     </li>
+                    <li>
+                        <a href="https://www.behance.net/brianubarcenas" class="social-link"><img src="src/iconmonstr-behance-1.svg" class="social-icon">Behance Portfolio</a>
+                    </li>
                 </ul>
             </nav>
         </div>
