--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav class="footer-nav">
                 <ul>
                     <li>
-                        <a href="mailto:brianbarcenas35@gmail.com" class="social-link"><img src="src/mail.svg" class="social-icon"><b>brianb@frostii.me</b></a>
+                        <a href="mailto:brianbarcenas35@gmail.com" class="social-link"><img src="src/mail.svg" class="social-icon"><b>brianbarcenas35@gmail.com</b></a>
                     </li>
                     <li>
                         <a href="https://linkedin.com/in/brian-barcenas707" class="social-link"><img src="src/linkedin.svg" class="social-icon">LinkedIn</a>
